--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -259,25 +259,25 @@
   conditions: ["RAY_CI_PYTHON_AFFECTED"]
   commands:
     - cleanup() { if [ "${BUILDKITE_PULL_REQUEST}" = "false" ]; then ./ci/build/upload_build_info.sh; fi }; trap cleanup EXIT
-    - ./ci/ci.sh test_minimal 3.6
+    - ./ci/ci.sh test_minimal 3.6 --test_env=PARALLEL_CI=1
 
 - label: ":python: Minimal install 3.7"
   conditions: ["RAY_CI_PYTHON_AFFECTED"]
   commands:
     - cleanup() { if [ "${BUILDKITE_PULL_REQUEST}" = "false" ]; then ./ci/build/upload_build_info.sh; fi }; trap cleanup EXIT
-    - ./ci/ci.sh test_minimal 3.7
+    - ./ci/ci.sh test_minimal 3.7 --test_env=PARALLEL_CI=1
 
 - label: ":python: Minimal install 3.8"
   conditions: ["RAY_CI_PYTHON_AFFECTED"]
   commands:
     - cleanup() { if [ "${BUILDKITE_PULL_REQUEST}" = "false" ]; then ./ci/build/upload_build_info.sh; fi }; trap cleanup EXIT
-    - ./ci/ci.sh test_minimal 3.8
+    - ./ci/ci.sh test_minimal 3.8 --test_env=PARALLEL_CI=1
 
 - label: ":python: Minimal install 3.9"
   conditions: ["RAY_CI_PYTHON_AFFECTED"]
   commands:
     - cleanup() { if [ "${BUILDKITE_PULL_REQUEST}" = "false" ]; then ./ci/build/upload_build_info.sh; fi }; trap cleanup EXIT
-    - ./ci/ci.sh test_minimal 3.9
+    - ./ci/ci.sh test_minimal 3.9 --test_env=PARALLEL_CI=1
 
 - label: ":python: Default install"
   conditions: ["RAY_CI_PYTHON_AFFECTED"]
