--- a/rllib/tuned_examples/ddpg/mountaincarcontinuous-ddpg.yaml
+++ b/rllib/tuned_examples/ddpg/mountaincarcontinuous-ddpg.yaml
@@ -46,7 +46,7 @@ mountaincarcontinuous-ddpg:
         use_huber: False
         huber_threshold: 1.0
         l2_reg: 0.00001
-        learning_starts: 1000
+        min_buffer_size_for_sampling: 1000
         rollout_fragment_length: 1
         train_batch_size: 64
 
