--- a/rllib/tuned_examples/slateq/interest-evolution-10-candidates-recsim-env-slateq-fake-gpus.yaml
+++ b/rllib/tuned_examples/slateq/interest-evolution-10-candidates-recsim-env-slateq-fake-gpus.yaml
@@ -40,7 +40,7 @@ interest-evolution-recsim-env-slateq:
         lr: 0.002
         train_batch_size: 64
 
-        learning_starts: 10000
+        min_buffer_size_for_sampling: 10000
         target_network_update_freq: 3200
 
         metrics_num_episodes_for_smoothing: 200
