--- a/release/rllib_tests/learning_tests/yaml_files/f-z/td3-halfcheetahbulletenv-v0.yaml
+++ b/release/rllib_tests/learning_tests/yaml_files/f-z/td3-halfcheetahbulletenv-v0.yaml
@@ -10,6 +10,6 @@ td3-halfcheetahbulletenv-v0:
     config:
         num_gpus: 1
         replay_buffer_config:
-          learning_starts: 10000
+          min_buffer_size_for_sampling: 10000
         exploration_config:
             random_timesteps: 10000
