--- a/rllib/tuned_examples/crr/cartpole-v0-crr.yaml
+++ b/rllib/tuned_examples/crr/cartpole-v0-crr.yaml
@@ -34,7 +34,7 @@ cartpole_crr:
         # replay buffer
         replay_buffer_config:
           type: ray.rllib.utils.replay_buffers.MultiAgentReplayBuffer
-          learning_starts: 0
+          min_buffer_size_for_sampling: 0
           capacity: 100000
         # specific to CRR
         weight_type: bin
