--- a/rllib/tuned_examples/dqn/pong-dqn.yaml
+++ b/rllib/tuned_examples/dqn/pong-dqn.yaml
@@ -14,7 +14,7 @@ pong-deterministic-dqn:
         replay_buffer_config:
           type: MultiAgentPrioritizedReplayBuffer
           capacity: 50000
-          learning_starts: 10000
+          min_buffer_size_for_sampling: 10000
         rollout_fragment_length: 4
         train_batch_size: 32
         exploration_config:
