--- a/rllib/tuned_examples/maddpg/two-step-game-maddpg.yaml
+++ b/rllib/tuned_examples/maddpg/two-step-game-maddpg.yaml
@@ -12,7 +12,8 @@ two-step-game-maddpg:
             env_config:
               actions_are_logits: true
 
-        num_ts_added_before_sampling_starts: 200
+        replay_buffer_config:
+          num_ts_added_before_sampling_starts: 200
 
         multiagent:
             policies:
