--- a/doc/source/_toc.yml
+++ b/doc/source/_toc.yml
@@ -235,6 +235,7 @@ parts:
           - file: ray-core/examples/plot_parameter_server
           - file: ray-core/examples/plot_pong_example
           - file: ray-core/examples/highly_parallel
+          - file: ray-core/examples/webcrawling
       - file: ray-core/package-ref
 
   - caption: Ray Clusters
