--- a/java/BUILD.bazel
+++ b/java/BUILD.bazel
@@ -177,7 +177,7 @@ define_java_module(
     ],
 )
 
-java_binary(
+java_test(
     name = "all_tests",
     args = ["java/testng.xml"],
     data = ["testng.xml"],
@@ -188,6 +188,22 @@ java_binary(
         ":io_ray_ray_serve_test",
         ":io_ray_ray_test",
     ],
+    tags = ["local"]
+)
+
+# Specify test class/method in `testng_custom.xml`
+java_test(
+    name = "custom_test",
+    args = ["java/testng_custom.xml"],
+    data = ["testng_custom.xml"],
+    main_class = "org.testng.TestNG",
+    runtime_deps = [
+        ":io_ray_ray_performance_test",
+        ":io_ray_ray_runtime_test",
+        ":io_ray_ray_serve_test",
+        ":io_ray_ray_test",
+    ],
+    tags = ["local"]
 )
 
 # We'd better make resource files can be accessed from 3rd party library.
