--- a/release/benchmarks/app_config.yaml
+++ b/release/benchmarks/app_config.yaml
@@ -1,6 +1,9 @@
 base_image: {{ env["RAY_IMAGE_ML_NIGHTLY_GPU"] | default("anyscale/ray-ml:nightly-py37-gpu") }}
 env_vars: {"LD_PRELOAD": "/usr/lib/x86_64-linux-gnu/libjemalloc.so"}
 
+debian_packages:
+- libjemalloc-dev
+
 python:
   pip_packages: []
   conda_packages: []
