--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1840,6 +1840,24 @@ cc_test(
     ],
 )
 
+cc_test(
+    name = "gcs_worker_manager_test",
+    size = "small",
+    srcs = [
+        "src/ray/gcs/gcs_server/test/gcs_worker_manager_test.cc",
+    ],
+    copts = COPTS,
+    tags = ["team:core"],
+    deps = [
+        ":gcs_server_lib",
+        ":gcs_server_test_util",
+        ":gcs_test_util_lib",
+        ":ray_mock",
+        "@com_google_googletest//:gtest_main",
+    ],
+)
+
+
 cc_library(
     name = "gcs_table_storage_lib",
     srcs = glob(
