added expectation as a possible adv_type for discrete actions in CRR

--- a/rllib/tuned_examples/crr/cartpole-v0-crr_expectation.yaml
+++ b/rllib/tuned_examples/crr/cartpole-v0-crr_expectation.yaml
@@ -39,6 +39,6 @@ cartpole_crr:
         # specific to CRR
         temperature: 1.0
         weight_type: bin
-        advantage_type: mean
+        advantage_type: expectation
         max_weight: 20.0
         n_action_sample: 4
