--- a/rllib/BUILD
+++ b/rllib/BUILD
@@ -1558,7 +1558,7 @@ py_test(
 py_test(
     name = "test_async_requests_manager",
     tags = ["team:rllib", "execution"],
-    size = "small",
+    size = "medium",
     srcs = ["execution/tests/test_async_requests_manager.py"]
 )
 
