[ci/release/core] Run `many_nodes` test on staging

--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -3129,6 +3129,8 @@
 - name: many_nodes
   group: core-scalability-test
   working_dir: benchmarks
+  env: staging
+
   legacy:
     test_name: many_nodes
     test_suite: benchmark_tests
