--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -104,6 +104,7 @@
 
   frequency: weekly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: horovod/app_config_master.yaml
@@ -141,6 +142,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: app_config.yaml
@@ -167,6 +169,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: app_config.yaml
@@ -194,6 +197,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: app_config_gpu.yaml
@@ -221,6 +225,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: app_config.yaml
@@ -247,6 +252,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: app_config.yaml
@@ -274,6 +280,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: app_config.yaml
@@ -301,6 +308,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: app_config.yaml
@@ -328,6 +336,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: app_config.yaml
@@ -355,6 +364,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: app_config.yaml
@@ -385,6 +395,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: app_config.yaml
@@ -410,6 +421,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: app_config.yaml
@@ -436,6 +448,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: app_config.yaml
@@ -463,6 +476,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: app_config.yaml
@@ -490,6 +504,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: app_config.yaml
@@ -516,6 +531,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: app_config.yaml
@@ -542,6 +558,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: app_config.yaml
@@ -572,6 +589,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: horovod/app_config.yaml
@@ -595,6 +613,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: horovod/app_config_master.yaml
@@ -618,6 +637,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: train/app_config.yaml
@@ -641,6 +661,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: train/app_config.yaml
@@ -664,6 +685,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: xgboost/app_config_gpu.yaml
@@ -686,6 +708,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: xgboost/app_config_gpu_master.yaml
@@ -708,6 +731,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: ray-lightning/app_config.yaml
@@ -731,6 +755,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: ray-lightning/app_config_master.yaml
@@ -754,6 +779,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: ../rllib_tests/app_config.yaml
@@ -782,6 +808,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: app_config.yaml
@@ -811,6 +838,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: app_config.yaml
@@ -840,6 +868,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: app_config.yaml
@@ -869,6 +898,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: app_config_ml.yaml
@@ -900,6 +930,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: app_config_ml.yaml
@@ -930,6 +961,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: app_config.yaml
@@ -958,6 +990,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: app_config.yaml
@@ -986,6 +1019,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: app_config.yaml
@@ -1017,6 +1051,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: app_config.yaml
@@ -1040,6 +1075,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: app_config.yaml
@@ -1066,6 +1102,7 @@
 
   frequency: weekly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: app_config.yaml
@@ -1095,6 +1132,7 @@
 
   frequency: weekly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: app_config.yaml
@@ -1134,6 +1172,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: app_config.yaml
@@ -1161,6 +1200,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: app_config.yaml
@@ -1184,6 +1224,7 @@
 
   frequency: weekly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: app_config_data.yaml
@@ -1215,6 +1256,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: dask_xgboost_app_config.yaml
@@ -1240,6 +1282,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: modin_xgboost_app_config.yaml
@@ -1265,6 +1308,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: torch_tune_serve_app_config.yaml
@@ -1320,6 +1364,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
   cluster:
     cluster_env: ../rllib_tests/app_config.yaml
     cluster_compute: tpl_cpu_3.yaml
@@ -1351,6 +1396,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
   cluster:
     cluster_env: app_config_np.yaml
     cluster_compute: tpl_cpu_1_large.yaml
@@ -1437,6 +1483,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
   cluster:
     cluster_env: ../rllib_tests/app_config.yaml
     cluster_compute: many_ppo.yaml
@@ -1555,6 +1602,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
   cluster:
     cluster_env: ../rllib_tests/app_config.yaml
     cluster_compute: tpl_cpu_1.yaml
@@ -1646,6 +1694,7 @@
 
   frequency: weekly
   team: ml
+  env: staging
   cluster:
     cluster_env: app_config.yaml
     cluster_compute: compute_tpl.yaml
@@ -2083,6 +2132,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: app_config.yaml
@@ -2114,6 +2164,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: app_config.yaml
@@ -2137,6 +2188,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: app_config.yaml
@@ -2160,6 +2212,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: app_config.yaml
@@ -2183,6 +2236,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: app_config.yaml
@@ -2206,6 +2260,7 @@
 
   frequency: nightly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: app_config.yaml
@@ -2229,6 +2284,7 @@
 
   frequency: weekly
   team: ml
+  env: staging
 
   cluster:
     cluster_env: app_config.yaml
@@ -2579,6 +2635,7 @@
   team: core
   frequency: nightly
   working_dir: microbenchmark
+  env: prod
 
   python: "3.7"
 
