--- a/doc/source/_toc.yml
+++ b/doc/source/_toc.yml
@@ -52,7 +52,7 @@ parts:
               - file: data/examples/big_data_ingestion
                 title: Large-scale ML Ingest
               - file: data/examples/ocr_example
-                title: Running OCR with Ray dataset
+                title: OCR with Ray Datasets
           - file: data/faq
           - file: data/package-ref
           - file: data/integrations
