Revert "[AIR][Serve] Rename ModelWrapperDeployment -> PredictorDeployment (#25962)"
This reverts commit 68692b34642a9e516ebd432fcc45649447b5c796.

--- a/python/ray/serve/BUILD
+++ b/python/ray/serve/BUILD
@@ -332,7 +332,7 @@ py_test(
 )
 
 py_test(
-    name = "test_air_integrations",
+    name = "test_model_wrappers",
     size = "medium",
     srcs = serve_tests_srcs,
     tags = ["exclusive", "team:serve"],
