--- a/rllib/tuned_examples/ddpg/pendulum-ddpg-fake-gpus.yaml
+++ b/rllib/tuned_examples/ddpg/pendulum-ddpg-fake-gpus.yaml
@@ -20,7 +20,7 @@ pendulum-ddpg-fake-gpus:
           type: MultiAgentPrioritizedReplayBuffer
           capacity: 10000
           worker_side_prioritization: false
-          num_ts_added_before_sampling_starts: 500
+          min_size_for_sampling: 500
         clip_rewards: false
         use_huber: true
         train_batch_size: 64
