--- a/rllib/tuned_examples/dqn/atari-dqn.yaml
+++ b/rllib/tuned_examples/dqn/atari-dqn.yaml
@@ -17,7 +17,7 @@ atari-basic-dqn:
         noisy: false
         replay_buffer_config:
           type: MultiAgentReplayBuffer
-          num_ts_added_before_sampling_starts: 20000
+          min_size_for_sampling: 20000
           capacity: 1000000
         n_step: 1
         target_network_update_freq: 8000
