--- a/rllib/tuned_examples/sac/atari-sac.yaml
+++ b/rllib/tuned_examples/sac/atari-sac.yaml
@@ -34,7 +34,7 @@ atari-sac-tf-and-torch:
           type: MultiAgentPrioritizedReplayBuffer
           capacity: 1000000
           # How many steps of the model to sample before learning starts.
-          num_ts_added_before_sampling_starts: 100000
+          min_size_for_sampling: 100000
           # If True prioritized replay buffer will be used.
           prioritized_replay_alpha: 0.6
           prioritized_replay_beta: 0.4
