--- a/rllib/tuned_examples/td3/invertedpendulum-td3.yaml
+++ b/rllib/tuned_examples/td3/invertedpendulum-td3.yaml
@@ -17,7 +17,7 @@ invertedpendulum-td3:
 
         # === Exploration ===
         replay_buffer_config:
-          num_ts_added_before_sampling_starts: 1000
+          min_size_for_sampling: 1000
         exploration_config:
             random_timesteps: 1000
 
