--- a/rllib/tuned_examples/td3/mujoco-td3.yaml
+++ b/rllib/tuned_examples/td3/mujoco-td3.yaml
@@ -22,7 +22,7 @@ mujoco-td3:
             random_timesteps: 10000
         replay_buffer_config:
           type: MultiAgentReplayBuffer
-          num_ts_added_before_sampling_starts: 10000
+          min_size_for_sampling: 10000
         # === Evaluation ===
         evaluation_interval: 10
         evaluation_duration: 10
