--- a/release/ml_user_tests/ray-lightning/app_config_master.yaml
+++ b/release/ml_user_tests/ray-lightning/app_config_master.yaml
@@ -15,5 +15,7 @@ post_build_cmds:
   - {{ env["RAY_WHEELS_SANITY_CHECK"] | default("echo No Ray wheels sanity check") }}
   # Upgrade the Ray Lightning version in post build commands, otherwise it will be cached in the Anyscale Docker image.
   - echo {{ env["TIMESTAMP"] }}
+  - pip3 install -U --force-reinstall pytorch-lightning lightning-bolts
   - pip uninstall ray_lightning -y # Uninstall first so pip does a reinstall.
   - pip3 install -U --no-cache-dir git+https://github.com/ray-project/ray_lightning#ray_lightning
+
