--- a/release/rllib_tests/learning_tests/yaml_files/a-e/dqn-pongdeterministic-v4.yaml
+++ b/release/rllib_tests/learning_tests/yaml_files/a-e/dqn-pongdeterministic-v4.yaml
@@ -2,8 +2,11 @@
 pong-deterministic-dqn:
     env: PongDeterministic-v4
     run: DQN
+    # Minimum reward and total ts (in given time_total_s) to pass this test.
+    pass_criteria:
+        episode_reward_mean: 18.0
+        timesteps_total: 1000000
     stop:
-        episode_reward_mean: 20
         time_total_s: 7200
     config:
         # Works for both torch and tf.
