--- a/release/rllib_tests/learning_tests/yaml_files/a3c-pongnoframeskip-v4.yaml
+++ b/release/rllib_tests/learning_tests/yaml_files/a3c-pongnoframeskip-v4.yaml
@@ -1,5 +1,5 @@
-a3c-pongdeterministic-v4:
-    env: PongDeterministic-v4
+a3c-pongnoframeskip-v4:
+    env: PongNoFrameskip-v4
     run: A3C
     # Minimum reward and total ts (in given time_total_s) to pass this test.
     pass_criteria:
