--- a/release/rllib_tests/learning_tests/yaml_files/apexdqn-pongnoframeskip-v4.yaml
+++ b/release/rllib_tests/learning_tests/yaml_files/apexdqn-pongnoframeskip-v4.yaml
@@ -1,9 +1,9 @@
-apex-breakoutnoframeskip-v4:
-    env: BreakoutNoFrameskip-v4
+apexdqn-pongnoframeskip-v4:
+    env: PongNoFrameskip-v4
     run: APEX
     # Minimum reward and total ts (in given time_total_s) to pass this test.
     pass_criteria:
-        episode_reward_mean: 100.0
+        episode_reward_mean: 18.0
         timesteps_total: 7000000
     stop:
         time_total_s: 7200
