--- a/release/rllib_tests/learning_tests/yaml_files/impala-pongnoframeskip-v4.yaml
+++ b/release/rllib_tests/learning_tests/yaml_files/impala-pongnoframeskip-v4.yaml
@@ -1,9 +1,9 @@
-impala-breakoutnoframeskip-v4:
-    env: BreakoutNoFrameskip-v4
+impala-pongnoframeskip-v4:
+    env: PongNoFrameskip-v4
     run: IMPALA
     # Minimum reward and total ts (in given time_total_s) to pass this test.
     pass_criteria:
-        episode_reward_mean: 200.0
+        episode_reward_mean: 18.0
         timesteps_total: 6000000
     stop:
         time_total_s: 1800
