--- a/rllib/BUILD
+++ b/rllib/BUILD
@@ -1649,6 +1649,7 @@ py_test(
 
 py_test(
     name = "test_ope_utils",
+    main = "offline/estimators/tests/test_utils.py",
     tags = ["team:rllib", "offline"],
     size = "small",
     srcs = ["offline/estimators/tests/test_utils.py"]
