--- a/rllib/tuned_examples/appo/memory-leak-test-appo.yaml
+++ b/rllib/tuned_examples/appo/memory-leak-test-appo.yaml
@@ -12,3 +12,10 @@ memory-leak-test-appo:
         num_workers: 4
         num_envs_per_worker: 5
         rollout_fragment_length: 20
+
+        # Include evaluation workers.
+        evaluation_num_workers: 2
+        evaluation_interval: 1
+        evaluation_parallel_to_training: true
+        evaluation_duration: 10
+        evaluation_duration_unit: episodes
