--- a/rllib/tuned_examples/impala/memory-leak-test-impala.yaml
+++ b/rllib/tuned_examples/impala/memory-leak-test-impala.yaml
@@ -15,3 +15,10 @@ memory-leak-test-impala:
         num_workers: 3
         num_aggregation_workers: 1
         num_envs_per_worker: 5
+
+        # Include evaluation workers.
+        evaluation_num_workers: 2
+        evaluation_interval: 1
+        evaluation_parallel_to_training: true
+        evaluation_duration: 10
+        evaluation_duration_unit: episodes
