--- a/rllib/tuned_examples/ppo/memory-leak-test-ppo.yaml
+++ b/rllib/tuned_examples/ppo/memory-leak-test-ppo.yaml
@@ -15,3 +15,10 @@ memory-leak-test-ppo:
         train_batch_size: 1000
         sgd_minibatch_size: 256
         num_sgd_iter: 5
+
+        # Include evaluation workers.
+        evaluation_num_workers: 2
+        evaluation_interval: 1
+        evaluation_parallel_to_training: true
+        evaluation_duration: 10
+        evaluation_duration_unit: episodes
