--- a/release/ml_user_tests/ray-lightning/app_config.yaml
+++ b/release/ml_user_tests/ray-lightning/app_config.yaml
@@ -10,8 +10,8 @@ python:
   conda_packages: []
 
 post_build_cmds:
+  - # Upgrade the Ray Lightning version, otherwise it will be cached in the Anyscale Docker image.
+  - echo { { env[ "TIMESTAMP" ] } }
+  - pip3 install -U --force-reinstall ray-lightning pytorch-lightning lightning-bolts
   - pip uninstall -y ray || true && pip3 install -U {{ env["RAY_WHEELS"] | default("ray") }}
   - {{ env["RAY_WHEELS_SANITY_CHECK"] | default("echo No Ray wheels sanity check") }}
-  # Upgrade the Ray Lightning version, otherwise it will be cached in the Anyscale Docker image.
-  - echo {{ env["TIMESTAMP"] }}
-  - pip3 install -U --force-reinstall ray-lightning pytorch-lightning lightning-bolts
