--- a/release/ml_user_tests/ray-lightning/app_config.yaml
+++ b/release/ml_user_tests/ray-lightning/app_config.yaml
@@ -7,10 +7,11 @@ python:
   pip_packages:
     - ray-lightning
     - tblib
+    - torch==1.9.0
   conda_packages: []
 
 post_build_cmds:
-  - # Upgrade the Ray Lightning version, otherwise it will be cached in the Anyscale Docker image.
+  # Upgrade the Ray Lightning version, otherwise it will be cached in the Anyscale Docker image.
   - echo {{ env["TIMESTAMP"] }}
   - pip3 install -U --force-reinstall ray-lightning pytorch-lightning lightning-bolts
   - pip uninstall -y ray || true && pip3 install -U {{ env["RAY_WHEELS"] | default("ray") }}
