[core] Add weekly test for 100TB random shuffle (#25908)
Adds a CI test for 100TB shuffle.

There is a custom config for this nightly test to: (1) make sure each node gets 4TB of storage, (2) head node has 0 CPUs, (3) worker nodes have half their actual vCPU count.

Related issue number

Closes #24480.

--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -3608,6 +3608,29 @@
     type: sdk_command
     file_manager: sdk
 
+- name: dataset_shuffle_push_based_random_shuffle_100tb
+  group: core-dataset-tests
+  working_dir: nightly_tests
+  legacy:
+    test_name: dataset_shuffle_push_based_random_shuffle_100tb
+    test_suite: dataset_test
+
+  stable: false
+
+  frequency: weekly
+  team: core
+  cluster:
+    cluster_env: shuffle/100tb_shuffle_app_config.yaml
+    cluster_compute: shuffle/100tb_shuffle_compute.yaml
+
+  run:
+    timeout: 28800
+    script: RAY_DATASET_PUSH_BASED_SHUFFLE=1 python dataset/sort.py --num-partitions=100000 --partition-size=1e9 --shuffle
+    wait_for_nodes:
+      num_nodes: 100
+    type: sdk_command
+    file_manager: sdk
+
 ##################
 # Core Chaos tests
 ##################
