add gpu tag to test_tensorflow_predictor

--- a/python/ray/train/BUILD
+++ b/python/ray/train/BUILD
@@ -288,7 +288,7 @@ py_test(
     name = "test_tensorflow_predictor",
     size = "small",
     srcs = ["tests/test_tensorflow_predictor.py"],
-    tags = ["team:ml", "exclusive", "ray_air"],
+    tags = ["team:ml", "exclusive", "ray_air", "gpu"],
     deps = [":train_lib"]
 )
 
