--- a/rllib/tuned_examples/pg/cartpole-crashing-pg.yaml
+++ b/rllib/tuned_examples/pg/cartpole-crashing-pg.yaml
@@ -2,8 +2,8 @@ cartpole-crashing-pg:
     env: ray.rllib.examples.env.cartpole_crashing.CartPoleCrashing
     run: PG
     stop:
-        episode_reward_mean: 150.0
-        timesteps_total: 120000
+        evaluation/episode_reward_mean: 180.0
+        num_env_steps_sampled: 150000
     config:
         # Works for both torch and tf.
         framework: tf
@@ -17,6 +17,7 @@ cartpole-crashing-pg:
                 # Every time a remote sub-environment crashes, a new env is created
                 # instead that will take this long (sleep) to "initialize".
                 init_time_s: 1.0
+        horizon: 200
         num_workers: 2
         num_envs_per_worker: 5
         # Switch on resiliency for failed sub environments (within a vectorized stack).
@@ -24,3 +25,9 @@ cartpole-crashing-pg:
         # Also ignore worker failures, however, this should not matter as we don't
         # expect any due to catching individual sub-env failures.
         ignore_worker_failures: true
+
+        evaluation_num_workers: 2
+        evaluation_interval: 1
+        evaluation_parallel_to_training: true
+        evaluation_config:
+          explore: false
