--- a/rllib/tuned_examples/cql/pendulum-cql.yaml
+++ b/rllib/tuned_examples/cql/pendulum-cql.yaml
@@ -7,13 +7,13 @@ pendulum-cql:
     run: CQL
     stop:
         evaluation/episode_reward_mean: -700
-        timesteps_total: 200000
+        timesteps_total: 1000000
     config:
         # Works for both torch and tf.
         framework: tf
 
         # Use one or more offline files or "input: sampler" for online learning.
-        input: ["tests/data/pendulum/enormous.zip"]
+        input: ["/Users/avnish/avnish_ray_2/rllib/tests/data/pendulum/pendulum_replay_v1.1.0.json"]
         # Our input file above comes from an SAC run. Actions in there
         # are already normalized (produced by SquashedGaussian).
         actions_in_input_normalized: true
@@ -25,6 +25,8 @@ pendulum-cql:
           type: MultiAgentReplayBuffer
           learning_starts: 0
         bc_iters: 100
+        num_workers: 4
+        min_time_s_per_iteration: 10
 
         metrics_smoothing_episodes: 5
 
