--- a/rllib/tuned_examples/cql/pendulum-cql.yaml
+++ b/rllib/tuned_examples/cql/pendulum-cql.yaml
@@ -13,7 +13,7 @@ pendulum-cql:
         framework: tf
 
         # Use one or more offline files or "input: sampler" for online learning.
-        input: ["/Users/avnish/avnish_ray_2/rllib/tests/data/pendulum/pendulum_replay_v1.1.0.json"]
+        input: ["tests/data/pendulum/enormous.zip"]
         # Our input file above comes from an SAC run. Actions in there
         # are already normalized (produced by SquashedGaussian).
         actions_in_input_normalized: true
@@ -21,9 +21,6 @@ pendulum-cql:
 
         twin_q: true
         train_batch_size: 2000
-        replay_buffer_config:
-          type: MultiAgentReplayBuffer
-          learning_starts: 0
         bc_iters: 100
         num_workers: 4
         min_time_s_per_iteration: 10
