Reduce cpus in cartpole crr to fit in cpu reqs of ci

--- a/rllib/tuned_examples/crr/cartpole-v0-crr.yaml
+++ b/rllib/tuned_examples/crr/cartpole-v0-crr.yaml
@@ -7,6 +7,7 @@ cartpole_crr:
     config:
         input:
           - 'tests/data/cartpole/large.json'
+        num_workers: 3
         framework: torch
         gamma: 0.99
         train_batch_size: 2048
