Increase test timeout
Signed-off-by: Kai Fricke <kai@anyscale.com>

--- a/python/ray/tune/BUILD
+++ b/python/ray/tune/BUILD
@@ -306,7 +306,7 @@ py_test(
 
 py_test(
     name = "test_trainable",
-    size = "small",
+    size = "medium",
     srcs = ["tests/test_trainable.py"],
     deps = [":tune_lib"],
     tags = ["team:ml", "exclusive", "tests_dir_T"],
