--- a/doc/source/ray-air/examples/BUILD
+++ b/doc/source/ray-air/examples/BUILD
@@ -30,10 +30,12 @@ py_test_run_all_notebooks(
 
 # GPU Tests
 
-# py_test_run_all_notebooks( # REGRESSION!
-#     size = "large",
-#     include = ["huggingface_text_classification.ipynb", "torch_incremental_learning.ipynb"],
-#     exclude = [],
-#     data = ["//doc/source/ray-air/examples:air_examples"],
-#     tags = ["exclusive", "team:ml", "gpu", "ray_air"],
-# )
+py_test_run_all_notebooks(
+    size = "large",
+    exclude = [ # REGRESSION!
+        "huggingface_text_classification.ipynb",
+        "torch_incremental_learning.ipynb"
+    ],
+    data = ["//doc/source/ray-air/examples:air_examples"],
+    tags = ["exclusive", "team:ml", "gpu", "ray_air"],
+)
