--- a/release/rllib_tests/learning_tests/yaml_files/a-e/cql-halfcheetahbulletenv-v0.yaml
+++ b/release/rllib_tests/learning_tests/yaml_files/a-e/cql-halfcheetahbulletenv-v0.yaml
@@ -27,7 +27,7 @@ cql-halfcheetahbulletenv-v0:
         rollout_fragment_length: 1
         replay_buffer_config:
           type: MultiAgentReplayBuffer
-          min_size_for_sampling: 256
+          min_size: 256
         train_batch_size: 256
         target_network_update_freq: 0
         min_train_timesteps_per_iteration: 1000
