--- a/rllib/tuned_examples/apex_dqn/cartpole-apex-dqn.yaml
+++ b/rllib/tuned_examples/apex_dqn/cartpole-apex-dqn.yaml
@@ -21,7 +21,7 @@ cartpole-apex-dqn-training-itr:
         replay_buffer_config:
           type: MultiAgentPrioritizedReplayBuffer
           capacity: 20000
-          min_size_for_sampling: 1000
+          min_size: 1000
 
         num_gpus: 0
 
