--- a/rllib/tuned_examples/ddpg/halfcheetah-ddpg.yaml
+++ b/rllib/tuned_examples/ddpg/halfcheetah-ddpg.yaml
@@ -37,7 +37,7 @@ halfcheetah-ddpg:
           prioritized_replay_beta: 0.4
           prioritized_replay_eps: 0.000001
           worker_side_prioritization: false
-          min_size_for_sampling: 500
+          min_size: 500
 
         clip_rewards: False
 
