--- a/rllib/tuned_examples/ddpg/halfcheetah-pybullet-ddpg.yaml
+++ b/rllib/tuned_examples/ddpg/halfcheetah-pybullet-ddpg.yaml
@@ -29,7 +29,7 @@ ddpg-halfcheetahbulletenv-v0:
           prioritized_replay_beta: 0.4
           prioritized_replay_eps: 0.000001
           worker_side_prioritization: false
-          min_size_for_sampling: 500
+          min_size: 500
         clip_rewards: false
         actor_lr: 0.001
         critic_lr: 0.001
