--- a/rllib/tuned_examples/ddpg/hopper-pybullet-ddpg.yaml
+++ b/rllib/tuned_examples/ddpg/hopper-pybullet-ddpg.yaml
@@ -32,7 +32,7 @@ ddpg-hopperbulletenv-v0:
           prioritized_replay_beta: 0.4
           prioritized_replay_eps: 0.000001
           worker_side_prioritization: false
-          min_size_for_sampling: 500
+          min_size: 500
         clip_rewards: False
         actor_lr: 0.001
         critic_lr: 0.001
