--- a/rllib/tuned_examples/ddpg/pendulum-ddpg.yaml
+++ b/rllib/tuned_examples/ddpg/pendulum-ddpg.yaml
@@ -37,7 +37,7 @@ pendulum-ddpg:
           type: MultiAgentPrioritizedReplayBuffer
           capacity: 10000
           worker_side_prioritization: false
-          min_size_for_sampling: 500
+          min_size: 500
         clip_rewards: False
 
         # === Optimization ===
