--- a/rllib/tuned_examples/sac/cartpole-continuous-pybullet-sac.yaml
+++ b/rllib/tuned_examples/sac/cartpole-continuous-pybullet-sac.yaml
@@ -14,7 +14,7 @@ cartpole-sac:
         n_step: 3
         replay_buffer_config:
           type: MultiAgentPrioritizedReplayBuffer
-          min_size_for_sampling: 256
+          min_size: 256
         initial_alpha: 0.2
         clip_actions: false
         min_sample_timesteps_per_iteration: 1000
