--- a/rllib/tuned_examples/sac/halfcheetah-pybullet-sac.yaml
+++ b/rllib/tuned_examples/sac/halfcheetah-pybullet-sac.yaml
@@ -24,7 +24,7 @@ halfcheetah-pybullet-sac:
         min_sample_timesteps_per_iteration: 1000
         replay_buffer_config:
           type: MultiAgentPrioritizedReplayBuffer
-          min_size_for_sampling: 10000
+          min_size: 10000
         optimization:
           actor_learning_rate: 0.0003
           critic_learning_rate: 0.0003
