--- a/rllib/tuned_examples/sac/mspacman-sac.yaml
+++ b/rllib/tuned_examples/sac/mspacman-sac.yaml
@@ -33,7 +33,7 @@ mspacman-sac-tf:
         # seems to work nevertheless.
         replay_buffer_config:
           type: MultiAgentPrioritizedReplayBuffer
-          min_size_for_sampling: 20000
+          min_size: 20000
         optimization:
             actor_learning_rate: 0.0003
             critic_learning_rate: 0.0003
