--- a/rllib/tuned_examples/td3/pendulum-td3-fake-gpus.yaml
+++ b/rllib/tuned_examples/td3/pendulum-td3-fake-gpus.yaml
@@ -12,7 +12,7 @@ pendulum-td3-fake-gpus:
 
         replay_buffer_config:
           type: MultiAgentReplayBuffer
-          min_size_for_sampling: 5000
+          min_size: 5000
         exploration_config:
             random_timesteps: 5000
         evaluation_interval: 10
