--- a/rllib/tuned_examples/td3/pendulum-td3.yaml
+++ b/rllib/tuned_examples/td3/pendulum-td3.yaml
@@ -14,6 +14,6 @@ pendulum-td3:
         # === Exploration ===
         replay_buffer_config:
           type: MultiAgentReplayBuffer
-          min_size_for_sampling: 5000
+          min_size: 5000
         exploration_config:
             random_timesteps: 5000
