--- a/doc/source/data/examples/BUILD
+++ b/doc/source/data/examples/BUILD
@@ -23,4 +23,5 @@ py_test_run_all_notebooks(
     ],
     data = ["//doc/source/data/examples:data_examples"],
     tags = ["exclusive", "team:ml"],
+    allow_empty = True  # REGRESSION
 )
