--- a/python/ray/train/BUILD
+++ b/python/ray/train/BUILD
@@ -117,7 +117,7 @@ py_test(
     name = "test_batch_predictor",
     size = "small",
     srcs = ["tests/test_batch_predictor.py"],
-    tags = ["team:ml", "exclusive", "ray_air", "gpu"],
+    tags = ["team:ml", "exclusive", "ray_air"],
     deps = [":train_lib"]
 )
 
@@ -164,7 +164,7 @@ py_test(
 py_test(
     name = "test_horovod_trainer",
     size = "large",
-    srcs = ["tests/test_horovod_trainer.py", "python/ray/air/examples/horovod/horovod_pytorch_example.py"],
+    srcs = ["tests/test_horovod_trainer.py"],
     tags = ["team:ml", "exclusive", "ray_air"],
     deps = [":train_lib", "//python/ray/air:ml_lib"]
 )
@@ -261,7 +261,7 @@ py_test(
     name = "test_tensorflow_predictor",
     size = "small",
     srcs = ["tests/test_tensorflow_predictor.py"],
-    tags = ["team:ml", "exclusive", "ray_air", "gpu"],
+    tags = ["team:ml", "exclusive", "ray_air"],
     deps = [":train_lib"]
 )
 
@@ -285,7 +285,7 @@ py_test(
     name = "test_torch_predictor",
     size = "small",
     srcs = ["tests/test_torch_predictor.py"],
-    tags = ["team:ml", "exclusive", "ray_air", "gpu"],
+    tags = ["team:ml", "exclusive", "ray_air"],
     deps = [":train_lib"]
 )
 
