--- a/python/ray/train/BUILD
+++ b/python/ray/train/BUILD
@@ -117,7 +117,7 @@ py_test(
     name = "test_batch_predictor",
     size = "small",
     srcs = ["tests/test_batch_predictor.py"],
-    tags = ["team:ml", "exclusive", "ray_air"],
+    tags = ["team:ml", "exclusive", "ray_air", "gpu"],
     deps = [":train_lib"]
 )
 
@@ -261,7 +261,7 @@ py_test(
     name = "test_tensorflow_predictor",
     size = "small",
     srcs = ["tests/test_tensorflow_predictor.py"],
-    tags = ["team:ml", "exclusive", "ray_air"],
+    tags = ["team:ml", "exclusive", "ray_air", "gpu"],
     deps = [":train_lib"]
 )
 
@@ -285,7 +285,7 @@ py_test(
     name = "test_torch_predictor",
     size = "small",
     srcs = ["tests/test_torch_predictor.py"],
-    tags = ["team:ml", "exclusive", "ray_air"],
+    tags = ["team:ml", "exclusive", "ray_air", "gpu"],
     deps = [":train_lib"]
 )
 
