--- a/rllib/tuned_examples/impala/pong-impala.yaml
+++ b/rllib/tuned_examples/impala/pong-impala.yaml
@@ -10,9 +10,9 @@ pong-impala:
         rollout_fragment_length: 50
         train_batch_size: 500
         num_workers: 40
-        num_gpus: 1
+        num_gpus: 0
         num_envs_per_worker: 1
         _disable_execution_plan_api:
             grid_search:
-                - True
+                # - True
                 - False
