Add additional tests
Signed-off-by: Kai Fricke <kai@anyscale.com>

--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -129,7 +129,7 @@
   alert: default
 
 
-- name: air_benchmark_torch_mnist_4_cpu_nodes
+- name: air_benchmark_torch_mnist_cpu_4x1
   group: AIR tests
   working_dir: air_tests/air_benchmarks
 
@@ -139,7 +139,7 @@
 
   cluster:
     cluster_env: app_config.yaml
-    cluster_compute: compute_tpl.yaml
+    cluster_compute: compute_cpu_4.yaml
 
   run:
     timeout: 36000
@@ -151,14 +151,54 @@
     type: sdk_command
     file_manager: job
 
-  smoke_test:
-    frequency: disabled
+  alert: default
 
-    run:
-      timeout: 1800
+
+- name: air_benchmark_torch_mnist_cpu_1x4
+  group: AIR tests
+  working_dir: air_tests/air_benchmarks
+
+  frequency: nightly
+  team: ml
+  env: staging
+
+  cluster:
+    cluster_env: app_config.yaml
+    cluster_compute: compute_cpu_1.yaml
+
+  run:
+    timeout: 36000
+    script: python workloads/torch_benchmark.py run --num-runs 3 --num-epochs 20 --num-workers 4 --cpus-per-worker 2
+
+    type: sdk_command
+    file_manager: job
 
   alert: default
 
+
+- name: air_benchmark_torch_mnist_cpu_4x4
+  group: AIR tests
+  working_dir: air_tests/air_benchmarks
+
+  frequency: nightly
+  team: ml
+  env: staging
+
+  cluster:
+    cluster_env: app_config.yaml
+    cluster_compute: compute_cpu_4.yaml
+
+  run:
+    timeout: 36000
+    script: python workloads/torch_benchmark.py run --num-runs 3 --num-epochs 20 --num-workers 16 --cpus-per-worker 2
+
+    wait_for_nodes:
+      num_nodes: 4
+
+    type: sdk_command
+    file_manager: job
+
+  alert: default
 
 #######################
 # XGBoost release tests
